--- a/gb/24/5/2/n14238777.md
+++ b/gb/24/5/2/n14238777.md
@@ -3,18 +3,17 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵带给世界善良美好 德国不来梅观众盛赞</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238780-240501123444100101-600x400.jpg" />
-<h6>2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。演出结束时，艺术家四次谢幕。（张清飖／大纪元）
-</h6>
+<h6>2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。演出结束时，艺术家四次谢幕。（张清飖／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年05月02日讯】（大纪元德国不来梅记者站报导）“如果人们每天都把‘真、善、忍’放在心上，我相信大家会过上更好的生活，更好地与自己相处，与他人相处。”一位从事IT行业的女士观看神韵后如是说。</p>
 <p>2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出，票房提前一个月售罄。有些观众去年冬季就订好了票，等待半年，终于能在春暖花开的时节一睹神韵的风采，他们感到特别满足。</p>
 <p>神韵热潮持续在不来梅发酵，观众领略到传统文化的神圣美好，感悟到应该把“真、善、忍”放在心上，更加深深敬佩神韵艺术家的付出和精湛造诣。一位前武术大师激动地说，“这种100%的同步需要大量的训练和团队合作。艺术家散发出的激情和能量完全传递给了观众。我要向他们脱帽致敬！”</p>
 <p>观看演出时，观众表达“致敬”的方式则是鼓掌、鼓掌、再鼓掌。往往大幕一拉开，看到纯净美丽的画面展现在眼前，掌声已经响彻大厅。神韵艺术家每次做出高难度动作，舞蹈中每次呈现独具匠心的队形和造型，舞剧中每次出现感人的场面，观众的掌声总是随即响起。</p>
 <p>最后，神韵艺术家四次谢幕，观众不仅没有着急离开，反而一次比一次掌声更加热烈。此时此刻无需语言，台上的艺术家与台下的观众已经彼此相知，心有戚戚焉。</p>
-<figure id="attachment_14238781" aria-describedby="caption-attachment-14238781" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238781-240501123436100101.jpg"><img decoding="async" class="size-large wp-image-14238781" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238781-240501123436100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14238781" class="wp-caption-text">2024年5月1日下午，观众陆续来到不来梅大都会剧院（Metropol Theater Bremen）观看神韵演出。（张清飖／大纪元）</figcaption></figure>
-<figure id="attachment_14238784" aria-describedby="caption-attachment-14238784" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238784-240501123433100101.jpg"><img decoding="async" class="size-large wp-image-14238784" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238784-240501123433100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14238784" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。图为观众在剧院等待开演。（张清飖／大纪元）</figcaption></figure>
+<figure id="attachment_14238781" aria-describedby="caption-attachment-14238781" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238781-240501123436100101.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14238781" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238781-240501123436100101-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14238781" class="wp-caption-text">2024年5月1日下午，观众陆续来到不来梅大都会剧院（Metropol Theater Bremen）观看神韵演出。（张清飖／大纪元）</figcaption></figure>
+<figure id="attachment_14238784" aria-describedby="caption-attachment-14238784" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238784-240501123433100101.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14238784" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238784-240501123433100101-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14238784" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。图为观众在剧院等待开演。（张清飖／大纪元）</figcaption></figure>
 <h2>神韵展现传统文化 奥运沙滩排球名将感悟“生命来自天上”</h2>
-<figure id="attachment_14238785" aria-describedby="caption-attachment-14238785" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238785-240501123438100101.jpg"><img decoding="async" class="size-large wp-image-14238785" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238785-240501123438100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14238785" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。德国前沙滩排球名将、奥运奖牌得主、现在一家国际顾问集团公司担任人力发展顾问的Axel Hager和妻子Sabine一起观看了演出。（新唐人）</figcaption></figure>
+<figure id="attachment_14238785" aria-describedby="caption-attachment-14238785" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238785-240501123438100101.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14238785" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238785-240501123438100101-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14238785" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。德国前沙滩排球名将、奥运奖牌得主、现在一家国际顾问集团公司担任人力发展顾问的Axel Hager和妻子Sabine一起观看了演出。（新唐人）</figcaption></figure>
 <p>德国前沙滩排球名将、奥运奖牌得主Axel Hager和妻子Sabine观赏神韵后，赞赏演出的艺术之美，更喜欢传统文化中的神性内涵。</p>
 <p>Axel Hager目前是一家国际顾问集团公司的人力发展顾问，为管理层做咨询以及培训。他是前德国沙滩排球国家队选手，是5次德国冠军、悉尼奥运会铜牌及欧洲锦标赛银牌获得者。他还是前电视台沙滩排球节目主持人。由于他对推动德国沙滩排球运动的重要影响，每年德国沙滩排球锦标赛的举办场馆都以他的名字命名。</p>
 <p>Hager对神韵舞蹈艺术家表示由衷的赞佩，“我真的很喜欢他们演绎的方式，他们的表现力，美感和优雅，以及他们的高难度技巧。我实在是太喜欢他们的跳跃了，真是令人无比钦佩。”</p>
@@ -24,9 +23,10 @@
 <p>最后，Hager想对神韵艺术家表达感谢，“我想对他们说，一定要继续下去，因为你们是这个世界的使者，给世界带来善良和美好。”</p>
 <p>他的太太Sabine是一位制作手工艺品的艺术家，她也表示非常喜欢神韵的演绎方式，“完全沉浸在另一个世界之中，同时天幕背景又采用了现代技术，还有舞蹈和缤纷色彩的组合，我全部都很喜欢。”</p>
 <p>她非常喜欢演出的丰富多彩，“我很喜欢这种组合，能沉浸在古老的世界中，一下子又回到现代，如同进行了一个时光旅行，我们非常喜欢。”</p>
-<p>她表示会向更多人推荐神韵，“我们会向他们推荐，因为神韵是一个与众不同的世界。让我还很着迷的是舞蹈演员的整齐同步，还有缤纷的色彩，以及所有的组合。我唯有推荐，也会这么做。”</p>
+<p>她表示会向更多人推荐神韵，“我们会向他们推荐，因为神韵是一个与众不同的世界。让我还很着迷的是舞蹈演员的整齐同步，还有缤纷的色彩，以及所有的组合。我唯有推荐，也会这么做。”
+</p>
 <h2>神韵是最好的文化教育 智能自动化公司总经理深受启迪</h2>
-<figure id="attachment_14238786" aria-describedby="caption-attachment-14238786" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238786-240501123505100101.jpg"><img decoding="async" class="size-large wp-image-14238786" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238786-240501123505100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14238786" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。自动化公司总经理Johann Kimmel（左二）与太太Eva以及父亲和朋友一起观看了演出。（王亦笑／大纪元）</figcaption></figure>
+<figure id="attachment_14238786" aria-describedby="caption-attachment-14238786" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238786-240501123505100101.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14238786" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238786-240501123505100101-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14238786" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。自动化公司总经理Johann Kimmel（左二）与太太Eva以及父亲和朋友一起观看了演出。（王亦笑／大纪元）</figcaption></figure>
 <p>“演出精彩纷呈，完全超出我的预期，非常优秀的演出，还有现场管弦乐团，一切都配合得精准无误，能来看演出真的是太好了！”Johann Kimmel观看神韵后非常高兴。</p>
 <p>Johann Kimmel是一家智能自动化公司的总经理，该公司专门从事工业机器人编程和自动化技术服务，客户领域包括汽车和物流领域以及特种机械制造等。</p>
 <p>当天，Johann Kimmel和太太Eva以及父亲和朋友一起，从200公里外的Braunschweig专程赶到不来梅观看神韵。他说自己在YouTube上发现了神韵广告，当即就买了6张票，看完演出他们感到不虚此行。</p>
@@ -39,9 +39,9 @@
 <p>神韵演出中也揭示了中共对法轮大法修炼者的迫害，Kimmel觉得能在西方的舞台展现出来很重要，“这很有必要，这就是艺术民主（自由）的一种可能性，对此我表示赞同。”</p>
 <p>太太Eva是一家公司的文职人员，她也非常喜欢演出。她说，“演出令人印象非常深刻，特别是银幕（动态天幕）的呈现，演员们穿梭其中，非常精彩。还有舞蹈，服饰也是，真的令人难忘。”</p>
 <p>Kimmel的父亲表示，“这是神的舞动，非常好，这样的演出我从未见过。”</p>
-<p>最后，Kimmel表示明年他们还会一起来看演出。</p>
+<p>最后，Kimmel表示明年他们还会一起来看演出。
 <h2>建筑师夫妇：神韵弘扬传统、道德与价值 定义人类生活</h2>
-<figure id="attachment_14238787" aria-describedby="caption-attachment-14238787" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238787-240501123507100101.jpg"><img decoding="async" class="size-large wp-image-14238787" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238787-240501123507100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14238787" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。建筑师兼建筑事务所老板Mandy Zanner与先生Marcel Zanner一起观看了演出。（余平／大纪元）</figcaption></figure>
+<figure id="attachment_14238787" aria-describedby="caption-attachment-14238787" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14238787-240501123507100101.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14238787" title="" src="https://i.epochtimes.com/assets/uploads/2024/05/id14238787-240501123507100101-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14238787" class="wp-caption-text">2024年5月1日下午，美国神韵世界艺术团在德国不来梅大都会剧院（Metropol Theater Bremen）上演了今年当地第二场演出。建筑师兼建筑事务所老板Mandy Zanner与先生Marcel Zanner一起观看了演出。（余平／大纪元）</figcaption></figure>
 <p>“他们的服饰与舞动的姿态令人十分难忘，如此雍容华贵，如此优雅，给人留下非常深刻的印象。”Mandy Zanner女士观看神韵后表示，这里展示的传统价值观能很好地传递给年轻一代。</p>
 <p>Mandy Zanner女士是建筑师兼建筑事务所老板，先生Marcel Zanner在同一事务所担任商务管理工作。</p>
 <p>Zanner先生也非常陶醉，“我觉得特别好看，实在是太美妙了。美感十足，舞蹈曼妙，确实是极为精彩。”</p>
@@ -53,38 +53,34 @@
 <p>“无论如何，我们理解彼此相处是多么难能可贵。用艺术形式来描述这些是个巨大的挑战，我们深知无法理解或猜测其背后的涵义。”他说，神韵所演绎的故事“对于我们来说非常成功”。</p>
 <p>最后，Zanner表示，“这里的一切都非常美好，我们很高兴能够体验与享受这一切。”</p>
 <p>责任编辑：王亦笑</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/25/n14233533.md#1">神韵抵达墨西哥瓜达拉哈拉 开启13场演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/25/n14234253.md#1">公司经理：神韵带着我们一起旅行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/26/n14234955.md#1">公司软件首席设计师：神韵展现神性文化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/27/n14235097.md#1">前所未见的完美 德铁主管赞神韵：最顶级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/27/n14235544.md#1">观神韵欣赏传统文化 质量经理：我学到很多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/28/n14236031.md#1">神韵巴西接连爆满 名流倾慕 与神性共鸣</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/4/n8065341.md#1" target="_blank">我和孩子经历的神话（1）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/30/n10007999.md#1" target="_blank">文武：反“礼教”与中共罪恶</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/5/n10364709.md#1" target="_blank">修炼法轮功的中共军官们控告江泽民</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237959.md#1">【小说】红莲舞（15）相逢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283950.md#1">【时事金扫描】中东新战争？真主党轰以色列</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283961.md#1">【新闻看点】通缉下逃美 他讲述被中共活摘经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283753.md#1">【舞蹈】飞天大学2024第一学期舞蹈考试（高班 女生）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283509.md#1">英国民宅天花板上藏18万只蜜蜂 7年没人知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283104.md#1">逛Costco时五种令员工和购物者恼火的行为</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283097.md#1">世界小姐张梓琳晒带娃照 称8岁长女是苗条姐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282796.md#1">什么是“金钱畸形症”？ 如何应对？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280784.md#1">告别湿答答 内外除湿这样做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281348.md#1">日本北海道之旅 难忘的农庄餐馆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276567.md#1">厨房坏习惯会致癌？用对冰箱厨具 远离毒物危害</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/5/2/n14238777.htm">神韵带给世界善良美好 德国不来梅观众盛赞</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/2/n14238777.htm">神韵带给世界善良美好 德国不来梅观众盛赞</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/2/n14238777.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
